--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </header>
 
 <ol>
-    <li>Introduction</li>
-    <li>Terrestrial planets</li>
-    <li>Mars</li>
-    <li>Venus</li>
-    <li>Sources</li>
+    <li><a href="#">Introduction</a></li>
+    <li><a href="#">Terrestrial planets</a></li>
+    <li><a href="#">Mars</a></li>
+    <li><a href="#">Venus</a></li>
+    <li><a href="#">Sources</a></li>
 </ol>
 
 <h2>Introduction</h2>
@@ -80,3 +80,5 @@ Mars is named after the Roman god of war, it is often described as the <i>“Red
 
 <a href="https://en.wikipedia.org/wiki/Mars"></a>
 <a href="https://en.wikipedia.org/wiki/Venus"></a>
+        
+</html>
