--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-          <link href="css/stylesheet.css" rel="stylesheet">
+        <link href="css/stylesheet.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Orbitron:700' rel='stylesheet' type='text/css'>
-
-<header>
+            
         <h1>Planets</h1>
-</header>
+        </head>
 
 <ol class="ol1">
     <li><a href="#">Introduction</a></li>
