--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <p>A planet is a <i>celestial</i> body, orbiting a star, that is massive enough to be <em>gravitationally rounded</em> and has “cleared the neighbourhood” around its orbit.</p>
 
-<quote>“I think of space not as the final frontier but as the next frontier.”
-— Neil Degrasse Tyson</quote>
+<blockquote>“I think of space not as the final frontier but as the next frontier.”
+— Neil Degrasse Tyson</blockquote>
 
 <p><em>Unfortunately,</em> Pluto is no longer a planet but a dwarf planet. Sometimes I think, Pluto still deserves full planet hood.</p>
 
